--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,19 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.demo.aircontrol">
+          package="com.demo.aircontrol">
 
     <application
-        android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+            android:allowBackup="true"
+            android:icon="@mipmap/ic_launcher"
+            android:label="@string/app_name"
+            android:roundIcon="@mipmap/ic_launcher_round"
+            android:supportsRtl="true"
+            android:theme="@style/AppTheme">
+        <activity
+                android:name=".Charts1Activity"
+                android:label="@string/title_activity_charts1"
+                android:theme="@style/AppTheme.NoActionBar"
+                android:parentActivityName=".MainActivity"
+                android:screenOrientation="landscape">
+        </activity>
+        <activity
+                android:name=".Charts2Activity"
+                android:label="@string/title_activity_charts2"
+                android:theme="@style/AppTheme.NoActionBar"
+                android:parentActivityName=".MainActivity"
+                android:screenOrientation="landscape">
+        </activity>
+        <activity
+                android:name=".Charts3Activity"
+                android:label="@string/title_activity_charts3"
+                android:theme="@style/AppTheme.NoActionBar"
+                android:parentActivityName=".MainActivity"
+                android:screenOrientation="landscape">
+        </activity>
+        <activity
+                android:name=".MainActivity"
+                android:screenOrientation="landscape">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
     </application>
